--- a/style.css
+++ b/style.css
@@ -21,12 +21,13 @@
 	box-sizing: border-box;
 }
 
-html,
 body {
 	font-family: 'Outfit', sans-serif;
-	font-size: 18px;
 	background: var(--c-neutral-darkest);
 	color: var(--c-primary);
+	line-height: 1.5;
+	padding: 1rem;
+	/* Align items on page horizontally and vertically */
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
@@ -36,6 +37,13 @@ body {
 
 a {
 	text-decoration: none;
+	color: inherit;
+	transition: color 0.3s ease;
+}
+
+/* All links on page use same hover color */
+a:hover {
+	color: var(--c-secondary);
 }
 
 /* NFT Card */
