--- a/style.css
+++ b/style.css
@@ -48,10 +48,11 @@ a:hover {
 
 /* NFT Card */
 .nft-card {
-	width: 90%;
+	width: 87%;
 	max-width: 350px;
-	padding: 0.75rem 1rem;
+	padding: 1.5rem;
 	background: var(--c-neutral-darker);
+	border-radius: 10px;
 }
 
 /* NFT Image & Overlay */
