--- a/style.css
+++ b/style.css
@@ -135,3 +135,25 @@ a:hover {
 	border-top: 1px solid var(--c-neutral-dark);
 }
 
+/* NFT Author */
+.nft-author {
+	display: flex;
+	align-items: center;
+	gap: 1rem;
+	margin: 1rem 0 0.5rem;
+}
+
+.author-img {
+	width: 35px;
+	height: auto;
+	border: 1px solid var(--c-neutral-light);
+	border-radius: 50%;
+}
+
+.author-info {
+	font-size: 1rem;
+}
+
+.author-link {
+	color: var(--c-neutral-light);
+}
