--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 	background: var(--c-neutral-darkest);
 	color: var(--c-primary);
 	line-height: 1.5;
-	padding: 1rem;
+	/* padding: 1rem; */
 	/* Align items on page horizontally and vertically */
 	min-height: 100vh;
 	display: flex;
